Fix navigation overflowing screen, adjust paddings

--- a/components/DropdownMenu/DropdownSubMenu.module.css
+++ b/components/DropdownMenu/DropdownSubMenu.module.css
@@ -9,6 +9,10 @@
     max-width: none;
     padding: 0;
   }
+  @media (--lg-scr) {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .title {
